--- a/mrp_subcontracting/views/stock_move_views.xml
+++ b/mrp_subcontracting/views/stock_move_views.xml
@@ -13,12 +13,11 @@
                     <field name="state" invisible="1"/>
                     <field name="move_line_ids" context="{'default_product_id': product_id}" attrs="{'readonly': [('state', 'in', ['done', 'cancel'])]}">
                         <tree editable="bottom" decoration-muted="state in ('done', 'cancel')">
-                            <field name="company_id" invisible="1"/>
+                            <!-- <field name="company_id" invisible="1"/> -->
                             <field name="state" invisible="1"/>
                             <field name="tracking" invisible="1"/>
                             <field name="product_id" readonly="1"/>
-                            <field name="lot_produced_ids"
-                                widget="many2many_tags"
+                            <field name="lot_produced_id"
                                 context="{'default_product_id': parent.product_id}"
                                 attrs="{'column_invisible': [('parent.finished_lots_exist', '!=', True)]}"
                             />
@@ -30,7 +29,7 @@
             </form>
         </field>
     </record>
-    <record id="mrp_subcontracting_move_tree_view" model="ir.ui.view">
+    <!-- <record id="mrp_subcontracting_move_tree_view" model="ir.ui.view">
         <field name="name">mrp.subcontracting.move.tree.view</field>
         <field name="model">stock.move</field>
         <field name="priority">1000</field>
@@ -42,5 +41,5 @@
                 <attribute name="delete">0</attribute>
             </xpath>
         </field>
-    </record>
+    </record> -->
 </odoo>
